# renovate-issue-38252

./: MODULE.bazel  README.md  renovate.json
