"""Rules/toolchains for angular with Bazel."""

module(
    name = "angular-cli",
)
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_angular")
git_override(
    module_name = "rules_angular",
    commit = "123c921ec779a4af9bba8d7760425fda3b301c1c",
    remote = "https://github.com/devversion/rules_angular.git",
)

bazel_dep(name = "devinfra")
git_override(
    module_name = "devinfra",
    commit = "a24ba1915bf7051430d9c3f349ad9a176eb0d104",
    remote = "https://github.com/angular/dev-infra.git",
)
